added linguistic and activity
