# backend/internal/delivery/http/linguistic/linguistic_module.go
@@ -1,0 +1,25 @@
+package http
+
+import (
+	"github.com/QosmuratSamat0/Noona-AI/backend/internal/delivery/http/middleware"
+	"github.com/go-chi/chi/v5"
+)
+
+type LinguisticModule struct {
+	handler *LinguisticHandler
+}
+
+func NewLinguisticModule(uc LinguisticUseCase) *LinguisticModule {
+	return &LinguisticModule{
+		handler: NewLinguisticHandler(uc),
+	}
+}
+
+func (m *LinguisticModule) RegisterRoutes(r chi.Router, secret string) {
+	r.Route("/linguistic", func(r chi.Router) {
+		r.Use(middleware.AuthMiddleware(secret))
+
+		r.Get("/mistakes", m.handler.GetUserMistakes)
+		r.Get("/messages/{messageID}/corrections", m.handler.GetCorrectionsByMessage)
+	})
+}
